Revision history for Music-ModalFunction

{{$NEXT}}
    - Add the eg/common program.

0.0408 2024-01-25 11:28:21
    - Improve documentation more!

0.0407 2024-01-24 22:52:56
    - Improve documentation.

0.0406 2024-01-12 17:41:50
    - Add a companion example and test for common chords.

0.0405 2024-01-12 17:21:56
    - Add a simple but crucial example and test for common chords.

0.0404 2024-01-12 15:03:45
    - Use named results in the eg/mode-pivot program.

0.0403 2024-01-12 01:30:38
    - Fix documentation again...

0.0402 2024-01-12 01:01:39
    - Fix stupid typo.

0.0401 2024-01-12 00:55:09
    - Fix documentation.

0.0400 2024-01-12 00:34:18
    - Return hash results if requested.

0.0316 2024-01-05 11:45:32
    - Improve documentation.

0.0315 2023-07-16 07:33:22
    - Pin the needed MIDI::Util version.

0.0314 2023-07-16 07:27:02
    - Fix package name typo!

0.0313 2023-07-16 07:21:58
    - Attempt to fix the mystery smoke test failure...

0.0312 2023-06-05 23:24:55
    - Improve documentation again!

0.0311 2023-06-05 23:13:13
    - Improve documentation.

0.0310 2023-06-05 23:05:53
    - Fix a POD line!

0.0309 2023-06-05 22:55:26
    - Add comments to eg/mode-pivot.
    - Improve documentation.

0.0308 2023-06-05 12:22:53
    - Improve eg/mode-pivot a bit more.
    - Improve documentation.

0.0307 2023-06-04 21:35:58
    - Improve eg/mode-pivot.
    - Improve documentation.

0.0306 2023-06-04 19:00:08
    - Improve documentation!

0.0305 2023-06-04 11:42:29
    - Improve documentation again.

0.0304 2023-06-04 11:37:00
    - Fix the description grammar.

0.0303 2023-06-04 11:18:56
    - Improve eg/mode-pivot again.
    - Add code comments

0.0302 2023-06-04 08:43:33
    - Improve eg/mode-pivot.

0.0301 2023-06-04 00:44:59
    - Add the eg/mode-pivot example program.
    - Improve documentation.

0.0300 2023-06-03 14:07:39
    - Update comments and verbose output.
    - Improved test.
    - Add the roman_key() rule.

0.0202 2023-06-03 10:15:54