@@ -2,6 +2,7 @@ Revision history for Music-ModalFunction
 
 {{$NEXT}}
     - Add the eg/common program.
+    - Add non-modal scale processing.
 
 0.0408 2024-01-25 11:28:21
     - Improve documentation more!
